src/ui/Dialog.css
.DialogOverlay {
    background-color: rgba(0, 0, 0, 0.44);
    position: fixed;
    inset: 0;
    z-index: 1000;
    animation: fadeIn 150ms cubic-bezier(0.16, 1, 0.3, 1);
}

.DialogContent {
    background-color: #f3f3f3;
    border-radius: 6px;
    box-shadow: hsl(206 22% 7% / 35%) 0px 10px 38px -10px, hsl(206 22% 7% / 20%) 0px 10px 20px -15px;
    position: fixed;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    width: 90vw;
    max-width: 560px;
    max-height: 85vh;
    overflow-x: hidden;
    overflow-y: auto;
    padding: 16px 24px;
    z-index: 1001;
    outline: none;
    animation: contentShow 150ms cubic-bezier(0.16, 1, 0.3, 1);
}

.dark .DialogContent {
    background-color: #2a2a2a;
    border-color: #40414f;
    border-width: 1px;
}

.DialogContent input[type="checkbox"] {
    border: none;
    outline: none;
    box-shadow: none;
}

.DialogTitle {
    margin: 0 0 16px 0;
    font-weight: 500;
    color: #1a1523;
    font-size: 20px;
}

.dark .DialogTitle {
    color: #fff;
}

.Button {
    display: inline-flex;
    align-items: center;
    justify-content: center;
    border-radius: 4px;
    padding: 0 15px;
    font-size: 15px;
    line-height: 1;
    height: 35px;
}
.Button.green {
    background-color: #ddf3e4;
    color: #18794e;
}
.Button.red {
    background-color: #f9d9d9;
    color: #a71d2a;
}
.Button.neutral {
    background-color: transparent;
    color: #6f6e77;
    border: 1px solid #6f6e77;
    font-size: 13px;
    height: 26px;
    padding: 0 8px;
}
.Button.green:hover {
    background-color: #ccebd7;
}
.Button.neutral:hover {
    background-color: rgba(111, 110, 119, 0.1);
}
.dark .Button.neutral {
    color: #a0a0a8;
    border-color: #a0a0a8;
}
.dark .Button.neutral:hover {
    background-color: rgba(160, 160, 168, 0.1);
}
.Button:disabled {
    opacity: 0.5;
    color: #6f6e77;
    background-color: #e0e0e0;
    cursor: not-allowed;
}
.Button:disabled:hover {
    background-color: #e0e0e0;
}

.IconButton {
    font-family: inherit;
    border-radius: 100%;
    height: 25px;
    width: 25px;
    display: inline-flex;
    align-items: center;
    justify-content: center;
    color: #6f6e77;
}
.IconButton:hover {
    background-color: rgba(0, 0, 0, 0.06);
}

.CloseButton {
    position: absolute;
    top: 10px;
    right: 10px;
}

.Fieldset {
    display: flex;
    gap: 20px;
    align-items: center;
    margin-bottom: 15px;
}

.Label {
    font-size: 15px;
    color: #1a1523;
    min-width: 90px;
    text-align: right;
}

.dark .Label {
    color: #fff;
}

.Input {
    width: 100%;
    flex: 1;
    display: inline-flex;
    align-items: center;
    justify-content: center;
    border-radius: 4px;
    padding: 0 10px;
    font-size: 15px;
    line-height: 1;
    color: #000;
    background-color: #fafafa;
    box-shadow: 0 0 0 1px #6f6e77;
    height: 35px;
    outline: none;
}

.dark .Input {
    background-color: #2f2f2f;
    color: #fff;
    box-shadow: 0 0 0 1px #6f6e77;
}

.Description {
    font-size: 13px;
    color: #5a5865;
    text-align: right;
    margin-bottom: 4px;
}

.dark .Description {
    color: #bcbcbc;
}

.SelectSearch {
    width: 100%;
    padding: 8px 16px;
    border: 1px solid #6f6e77;
    border-bottom: none;
    border-radius: 4px 4px 0 0;
    background-color: transparent;
    color: inherit;
    font-size: 14px;
    outline: none;
}
.SelectSearch::placeholder {
    color: #9ca3af;
}

.SelectToolbar {
    display: flex;
    align-items: center;
    padding: 12px 16px;
    border-radius: 0;
    border: 1px solid #6f6e77;
    border-bottom: none;
}

.SelectList {
    position: relative;
    width: 100%;
    height: 270px;
    padding: 12px 16px;
    overflow-x: hidden;
    overflow-y: auto;
    border: 1px solid #6f6e77;
    border-radius: 0 0 4px 4px;
    white-space: nowrap;
}

.SelectItem {
    overflow: hidden;
    text-overflow: ellipsis;
}

.SelectItem label, .SelectItem input {
    cursor: pointer;
}

.SelectItem span {
    vertical-align: middle;
}

@keyframes contentShow {
    from {
        opacity: 0;
        transform: translate(-50%, -48%) scale(0.96);
    }
    to {
        opacity: 1;
        transform: translate(-50%, -50%) scale(1);
    }
}

